2002-08-24  Thomas Flynn  <tflynn@users.sf.net>

        * Finish updating conformance test results.

2002-08-24  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/script.cpp: Implemented
          Browser::createVrmlFromStream.

        * src/openvrml/OpenVRML/browser.h: Oops.

2002-08-23  S. K. Bose  <bose@pavan.barc.ernet.in>

        * VrmlMatrix.cpp: If the matrix is singular then it  
          prints debug message and returns instead of aborting.

        * private.h: Add macro to print debug messages.
  
2002-08-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/ScriptJDK.cpp: Modified
          FieldValue::clone to return an auto_ptr.

        * src/openvrml/OpenVRML/script.cpp: Work around auto_ptr brain
          damage on gcc 2.96.

        * src/openvrml/OpenVRML/browser.cpp: Fixed InitVisitor to set
          the visited flag on root nodes.

2002-08-22  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Fixes to work with the
          changes to the MF* FieldValue interfaces; spotty improvements
          exception safety and Java exception propagation.

2002-08-20  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h: General clean-up of FieldValue
          classes; print method now returns void.

        * README: Added note about Sun JDK problems under GNU/Linux.

2002-08-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: Fixed crash when calling
          Browser::loadURI.

        * src/openvrml/OpenVRML/field.cpp: Fixed const correctness
          issue in array_vector copy ctor.
