@@ -1,3 +1,9 @@
+2002-08-25  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/node.cpp,
+          src/openvrml/OpenVRML/node.h: Made operator== for
+          NodeInterface inline; added doc-comment for operator!=.
+
 2002-08-24  Thomas Flynn  <tflynn@users.sf.net>
 
         * Finish updating conformance test results.
